# fast-celery

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
app/: db.py  main.py  models.py  worker.py
